--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -149,17 +149,4 @@
 
 </div>
 
-<!--JAIR DE AQUI TOMA PARA LA IMPLEMENTACION-->
-
-
-<!-- <span style="display:none">{{fecha | date : 'yyyy-MM-dd h:mm:ss a' }}</span>
-<span style="display:none">{{fecha | date : 'h:mm:ss a' }}</span>
-<span style="display:none">{{fecha | date : 'shortTime' }}</span>
-<span style="display:none">{{fecha | date : 'shortDate' }}</span>
-<span style="display:none">{{fecha | date : 'd/M/yy' }}</span> -->
-
-<!-- <input [(ngModel)]="nombre" type="text" name="" id="">
-<input [(ngModel)]="username" type="text">
-<button (click)="printTweets()">Tweets</button>
-<textarea [(ngModel)]="textoT" maxlength="280" cols="30" rows="10"></textarea>
-<button (click)="createTweet()" >Crear tweet</button> -->
+<app-footer></app-footer>
