--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class=" row backgroundColor headerWidth">
 </div>
 <div class="row margin2">
@@ -126,6 +127,7 @@
         </div>
     </div>
 
+    <app-footer></app-footer>
 
 
 <!--<input [(ngModel)]="nombre" type="text">
